--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,5 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 Demo Notebooks/dengue.csv.gz
+notebooks/AutogluonModels/
+
