--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,19 @@
-[tool.poetry]
-name = "sprint-template"
+[project]
+name = "mosqlimate-sprint"
 version = "0.1.0"
-description = ""
-authors = ["Eduardo Correa Araujo <65051489+eduardocorrearaujo@users.noreply.github.com>"]
+description = "Add your description here"
 readme = "README.md"
-
-[tool.poetry.dependencies]
-python = "<3.13,>=3.10"
-mosqlient = "1.5.2"
-epiweeks = "^2.3.0"
-jupyter = "^1.0.0"
-pmdarima = "^2.0.4"
-python-dotenv = "^1.0.1"
-
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires-python = ">=3.11"
+dependencies = [
+    "epiweeks>=2.3.0",
+    "jupyter>=1.1.1",
+    "mosqlient>=1.9.3",
+    "pmdarima>=2.0.4",
+    "prophet>=1.1.7",
+    "python-dotenv>=1.1.1",
+    "plotly>=5.0.0",
+    "matplotlib>=3.5.0",
+    "pandas>=1.5.0",
+    "numpy>=1.21.0",
+    "autogluon>=1.3.1",
+]
