--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,4 +16,8 @@ dependencies = [
     "pandas>=1.5.0",
     "numpy>=1.21.0",
     "autogluon>=1.3.1",
+    "polars>=1.31.0",
+    "seaborn>=0.13.2",
+    "missingno>=0.5.2",
+    "lets-plot>=4.6.2",
 ]
