--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "epiweeks>=2.3.0",
     "jupyter>=1.1.1",
-    "mosqlient>=1.9.3",
+    "mosqlient[analyze]>=1.9.3",
     "pmdarima>=2.0.4",
     "prophet>=1.1.7",
     "python-dotenv>=1.1.1",
