--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,5 @@ cython_debug/
 Demo Notebooks/dengue.csv.gz
 notebooks/AutogluonModels/
 data/dataset_complete_dengue_municipality.parquet
+notebooks/aws_forecasting_chronos.ipynb
+
