--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,11 +15,13 @@ dependencies = [
     "matplotlib>=3.5.0",
     "pandas>=1.5.0",
     "numpy>=1.21.0",
-    "autogluon>=1.3.1",
+    "autogluon>=1.4.0",
     "polars>=1.31.0",
     "seaborn>=0.13.2",
     "missingno>=0.5.2",
     "lets-plot>=4.6.2",
     "inequality>=1.1.2",
     "concentrationmetrics>=0.6.0",
+    "datasets>=4.0.0",
+    "transformers>=4.49.0",
 ]
