--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,4 +24,5 @@ dependencies = [
     "concentrationmetrics>=0.6.0",
     "datasets>=4.0.0",
     "transformers>=4.49.0",
+    "geopandas>=1.1.1",
 ]
